# AICheck

./: .coveragerc  .gitignore  .sonarcloud.properties  LICENSE  README.md  analyze.ps1  example.csv  example.xlsx  nuitka.ps1  pyproject.toml  pyrightconfig.json  settings.json.example  sonar-project.properties  sonar-token.txt
.github/scripts/: ci_fixtures.py
.github/workflows/: aicheck-analysis.yml  ci.yml  release.yml
src/: main.py
src/adapters/: __init__.py  read_csv.py  read_history_results.py  read_xlsx.py
src/config/: __init__.py  settings.py
src/controllers/: main_controller.py  vllm_test_controller.py
src/models/: __init__.py  base.py  ports.py  sheet.py  type.py  vllm_results.py
src/services/: __init__.py  check_history_results.py  test_vllm.py
src/utils/: get_path.py  print_results.py  test_print.py  write_csv.py
src/views/: main_view.py
src/views/ui/: main_window.ui
tests/: test_controller_and_main.py  test_gui_and_controller.py  test_history_ports_and_print_utils.py  test_import_fallbacks.py  test_models_and_services.py  test_utils_and_settings.py
typings/: python_calamine.pyi
