[project]
name = "aicheck"
version = "0.1.0"
description = "Check vllm models via url"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pyinstrument>=5.1.2",
    "pyright>=1.1.408",
    "python-calamine>=0.6.2",
    "sourcery>=1.43.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
]

[tool.mypy]
exclude = ["(^|/)output(/|$)"]
